# trainspotting

./: .gitignore  correct_roll.py  manage.py  pyproject.toml  record.py  requirements.txt  unroll_video.py
classification/: deblur.py  utils.py
classification/management/commands/: classify.py  deblur.py  harvest.py
detection/: camera_stream.py  capture_pipeline.py  detector.py  difference.py  models.py  motion_capture.py  pipeline.py  placard.py  tasks.py  train_detection.py  urls.py  utils.py  views.py
detection/management/commands/: capture.py  check_clips.py  check_frame.py  clean.py  clip.py  clip_stubs.py  detect.py  detect_2.py  extract.py  focus.py  gst.py  import.py  load_videos.py  record.py  scan.py  snapshot.py  stitch_blurred_text.py  stream.py  test_capture.py  test_diff.py  test_plot.py
detection/migrations/: 0001_initial.py  0002_remove_clip_end_remove_clip_end_frame_and_more.py  0002_rename_location_video_camera_and_more.py  0003_alter_clipstub_end_alter_clipstub_start.py  0003_remove_clip_detect_task_remove_importtask_camera_and_more.py  0004_alter_clip_file.py  0005_alter_clip_file_alter_detection_sample.py
trainspotting/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
