[tool.poetry]
name = "trainspotting"
version = "0.1.0"
description = ""
authors = ["Jake Klingensmith"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
Django = "^5.1.2"
opencv-python = "^4.10.0.84"
django-extensions = "^3.2.3"
fastai = "^2.7.18"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
jupyter = "^1.1.1"
plotly = "^6.0.0"
requests = "^2.32.3"
scipy = "^1.15.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
